# chat

trading_system/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
trading_system/alembic/versions/: 0001_initial.py
trading_system/analytics/metrics/: live_transfer.py  performance.py
trading_system/apps/api/: main.py  ops_layer.py
trading_system/apps/backtester/: runner.py
trading_system/apps/paper_exchange/: runner.py
trading_system/artifacts/: backtest_summary_sample.json  experiments.jsonl  live_transfer_validation_sample.json
trading_system/benchmarks/: maker_path_benchmark.py
trading_system/configs/: accumulation_mode.yaml  aggressive.yaml  backtest_demo.yaml  canary_live.yaml  ensemble_mode.yaml  expert_high_risk.yaml  live_approval_mode.yaml  local_dev.yaml  maker_heavy.yaml  market_making_mode.yaml  onchain_hybrid_modes.yaml  paper_demo.yaml  paper_mode.yaml  replay_lab.yaml  research_gpu.yaml  shadow_live.yaml
trading_system/docs/: architecture_expert_stack.md  backtesting_realism_and_portability.md  deployment_single_node.md  market_making_framework.md  onchain_hybrid_architecture.md  risk_policy.md  strategy_catalog_expert.md  voice_agent_webhook_contract.md
trading_system/onchain/: models.py
trading_system/replay_scenarios/: hybrid_quote_decay.json
trading_system/risk/: engine.py
trading_system/scripts/: benchmark_onchain_path_analyzer.py
voice-agent/: README.md  pyproject.toml
voice-agent/configs/: bench.yaml  dev.yaml
voice-agent/dataset/: manifest.jsonl
voice-agent/tests/: test_end_to_end_replay.py
(+250 files in other folders)
